# rusty-fish

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: book-corpus-probe.yml  engine-core-perft.yml  external-stockfish-sprt.yml  fixed-opponent-gauntlet.yml  mobility-gate.yml  nnue-campaign.yml  nnue-train.yml  opening-book-refresh.yml  opening-book.yml  spsa-tuning.yml  syzygy-corpus.yml  tactical-suite.yml  throughput-benchmark.yml
.superpowers/sdd/: stockfish-calibration-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md
app-desktop/: Cargo.toml
app-desktop/src/: main.rs
assets/lmr/: rusty-fish-lmr.rflm
assets/nnue/: README.md  rusty-fish-net.rfnn  wdl-corpus.toml
assets/opening-book/: fixture-metrics.tsv  hitrate-suite.pgn  lichess-cc0-fixture.pgn  manifest.toml  metrics.tsv  rusty-fish-book-v2.txt
book-tool/: Cargo.toml
book-tool/src/: main.rs
book-tool/tests/: generate.rs
docs/: HANDOFF.md  RESEARCH-DIRECTION.md  nnue-trainer-performance.md  public-fen-eval-loader.md
engine-bench/: Cargo.toml
engine-bench/src/: bench_harness.rs  dataset.rs  lib.rs  main.rs  stockfish.rs  train.rs
engine-core/: Cargo.toml
engine-core/examples/: perft_bench.rs
engine-core/src/: lib.rs
engine-search/: Cargo.toml
engine-search/examples/: search_bench.rs
engine-search/src/: lib.rs  lmr_model.rs  nnue.rs  telemetry.rs
engine-search/testdata/: rfnn-v1-known-parameters.hex
engine-uci/: Cargo.toml
modal/: README.md  app.py  test_train_nnue.py  train_lmr.py  train_nnue.py
(+66 files in other folders)
